--- a/l10n_ar_ux/views/account_journal_views.xml
+++ b/l10n_ar_ux/views/account_journal_views.xml
@@ -8,6 +8,7 @@
         <field name="arch" type="xml">
 
             <field name="l10n_latam_use_documents" position="after">
+                <field name="l10n_latam_country_code" invisible="1"/>
                 <field name="l10n_ar_is_pos" attrs="{'invisible':['|', '|', ('l10n_latam_country_code', '!=', 'AR'), ('l10n_latam_use_documents', '=', False), ('type', 'not in', ['sale', 'purchase'])]}"/>
             </field>
 
