[FIX] res config errors

--- a/l10n_ar_account_withholding/views/account_payment_view.xml
+++ b/l10n_ar_account_withholding/views/account_payment_view.xml
@@ -8,6 +8,7 @@
         <field name="inherit_id" ref="account.view_account_payment_tree"/>
         <field name="arch" type="xml">
             <tree>
+                <field name="partner_type" invisible="1"/>
                 <field name="payment_method_code" invisible="1"/>
                 <button name="%(action_report_withholding_certificate)d" icon="fa-print " string="Print withholding voucher" type="action" attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
             </tree>
@@ -21,6 +22,7 @@
         <field name="inherit_id" ref="account_payment_group.view_account_payment_from_group_tree"/>
         <field name="arch" type="xml">
             <tree>
+                <field name="partner_type" invisible="1"/>
                 <field name="payment_method_code" invisible="1"/>
                 <button name="%(action_report_withholding_certificate)d" icon="fa-print " string="Print withholding voucher" type="action" attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
             </tree>
