--- a/l10n_ar_ux/wizards/res_config_settings_views.xml
+++ b/l10n_ar_ux/wizards/res_config_settings_views.xml
@@ -3,10 +3,11 @@
 
     <!-- WARNING this view is going to be deactivated by l10n_ar_edi_ux -->
     <!-- TODO we should improove this view deactivation because it's not so odoo way -->
+    <!--
     <record model="ir.ui.view" id="res_config_settings_view_form">
         <field name="name">res.config.settings.view.form.inherit</field>
         <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="account.res_config_settings_view_form"/>
+        <field name="inherit_id" ref="l10n_ar.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@data-key='account']/div" position="after">
                 <field name="l10n_ar_country_code" invisible="1"/>
@@ -16,7 +17,7 @@
             </xpath>
         </field>
     </record>
-
+    -->
     <record model="ir.ui.view" id="res_config_settings_inherit_view_form">
         <field name="name">res.config.settings.view.form.inherit</field>
         <field name="model">res.config.settings</field>
