--- a/l10n_ar_ux/wizards/res_config_settings_views.xml
+++ b/l10n_ar_ux/wizards/res_config_settings_views.xml
@@ -37,6 +37,7 @@
                 </div>
             </xpath>
             <xpath expr="//div[@data-key='account']//field[@name='module_snailmail_account']/../.." position="after">
+                 <field name="l10n_ar_country_code" invisible="1"/>
                  <div class="col-12 col-lg-6 o_setting_box" attrs="{'invisible': ['|', ('group_multi_currency', '=', False), ('l10n_ar_country_code', '!=', 'AR')]}">
                     <div class="o_setting_left_pane">
                         <field name="l10n_ar_invoice_report_ars_amount"/>
