--- a/l10n_ar_account_withholding/views/account_payment_view.xml
+++ b/l10n_ar_account_withholding/views/account_payment_view.xml
@@ -2,16 +2,22 @@
 <odoo>
 
     <!-- tree of payments -->
+
     <record id="view_account_payment_tree" model="ir.ui.view">
         <field name="name">account.payment.tree</field>
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_tree"/>
         <field name="arch" type="xml">
-            <tree>
+            <xpath expr="//field[@name='state']" position="after">
                 <field name="partner_type" invisible="1"/>
                 <field name="payment_method_code" invisible="1"/>
-                <button name="%(action_report_withholding_certificate)d" icon="fa-print " string="Print withholding voucher" type="action" attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
-            </tree>
+                <button name="print_withholding_voucher" 
+                        icon="fa-print" 
+                        string="Print withholding voucher" 
+                        type="object"
+                        class="oe_highlight"
+                        attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
+            </xpath>
         </field>
     </record>
 
@@ -21,11 +27,16 @@
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account_payment_group.view_account_payment_from_group_tree"/>
         <field name="arch" type="xml">
-            <tree>
+            <xpath expr="//field[@name='state']" position="after">
                 <field name="partner_type" invisible="1"/>
                 <field name="payment_method_code" invisible="1"/>
-                <button name="%(action_report_withholding_certificate)d" icon="fa-print " string="Print withholding voucher" type="action" attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
-            </tree>
+                <button type="object"
+                        class="oe_highlight"
+                        name="print_withholding_voucher" 
+                        icon="fa-print" 
+                        string="Print withholding voucher" 
+                        attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
+            </xpath>
         </field>
     </record>
 
