--- a/l10n_ar_account_withholding/wizard/res_config_settings_views.xml
+++ b/l10n_ar_account_withholding/wizard/res_config_settings_views.xml
@@ -5,7 +5,10 @@
         <field name="name">res.config.settings.view.form.inherit.l10n_ar_afip_ws</field>
         <field name="model">res.config.settings</field>
         <!-- <field name="priority">99</field> -->
-        <field name="inherit_id" ref="l10n_ar.res_config_settings_view_form"/>
+        <!--
+        <field name="inherit_id" ref="b_l10n_ar.res_config_settings_view_form"/> 
+        -->
+        <field name="inherit_id" ref="account_payment_fix.b_inherit_res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//div[@id='argentina_localization']" position="inside">
                 <div class="col-xs-12 col-md-6 o_setting_box">
