FIX retenciones localización argentina

--- a/l10n_ar_account_withholding/views/account_payment_view.xml
+++ b/l10n_ar_account_withholding/views/account_payment_view.xml
@@ -11,12 +11,18 @@
             <xpath expr="//field[@name='state']" position="after">
                 <field name="partner_type" invisible="1"/>
                 <field name="payment_method_code" invisible="1"/>
+                <!--
                 <button name="print_withholding_voucher" 
                         icon="fa-print" 
                         string="Print withholding voucher" 
                         type="object"
                         class="oe_highlight"
                         attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
+                -->
+                <button name="print_withholding_voucher" 
+                        icon="fa-print"
+                        type="object"
+                        attrs="{'invisible': ['|', ('payment_method_code', 'not in', ['withholding_in', 'withholding_out']), ('partner_type', '!=', 'supplier')]}"/>
             </xpath>
         </field>
     </record>
@@ -30,12 +36,18 @@
             <xpath expr="//field[@name='state']" position="after">
                 <field name="partner_type" invisible="1"/>
                 <field name="payment_method_code" invisible="1"/>
+                <!--
                 <button type="object"
                         class="oe_highlight"
                         name="print_withholding_voucher" 
                         icon="fa-print" 
                         string="Print withholding voucher" 
                         attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
+                 -->
+                 <button type="object"
+                        name="print_withholding_voucher" 
+                        icon="fa-print"
+                        attrs="{'invisible': ['|', ('payment_method_code', '!=', ['withholding_in', 'withholding_out']), ('partner_type', '!=', 'supplier')]}"/>
             </xpath>
         </field>
     </record>
