--- a/l10n_ar_account_withholding/views/account_payment_view.xml
+++ b/l10n_ar_account_withholding/views/account_payment_view.xml
@@ -35,7 +35,7 @@
                         name="print_withholding_voucher" 
                         icon="fa-print" 
                         string="Print withholding voucher" 
-                        attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
+                        attrs="{'invisible': [('payment_method_code', 'not in', ['withholding_in', 'withholding_out'])]}"/>
             </xpath>
         </field>
     </record>
