--- a/l10n_ar_account_withholding/reports/report_withholding_certificate.xml
+++ b/l10n_ar_account_withholding/reports/report_withholding_certificate.xml
@@ -116,15 +116,13 @@
         </t>
     </template>
 
-    <report
-        string="Certificado de Retención"
-        id="action_report_withholding_certificate"
-        model="account.payment"
-        report_type="qweb-pdf"
-        name="l10n_ar_account_withholding.report_withholding_certificate"
-        file="l10n_ar_account_withholding.report_withholding_certificate"
-        print_report_name="'Certificado de Retención Slip - %s' % (object.withholding_number or '')"
-        menu="False"
-    />
+    <record id="action_report_withholding_certificate" model="ir.actions.report">
+        <field name="name">Certificado de Retención</field>
+        <field name="model">account.payment</field>
+        <field name="report_name">l10n_ar_account_withholding.report_withholding_certificate</field>
+        <field name="report_file">l10n_ar_account_withholding.report_withholding_certificate</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="print_report_name">'Certificado de Retención Slip - %s' % (object.withholding_number or '')</field>
+    </record>
 
 </odoo>
