--- a/l10n_ar_account_withholding/views/account_payment_view.xml
+++ b/l10n_ar_account_withholding/views/account_payment_view.xml
@@ -13,7 +13,7 @@
                 <field name="payment_method_code" invisible="1"/>
                 <button name="print_withholding_voucher" 
                         icon="fa-print" 
-                        string="Print withholding voucher" 
+                        title="Print withholding voucher"
                         type="object"
                         class="oe_highlight"
                         attrs="{'invisible': ['|', ('payment_method_code', '!=', 'withholding'), ('partner_type', '!=', 'supplier')]}"/>
@@ -34,7 +34,7 @@
                         class="oe_highlight"
                         name="print_withholding_voucher" 
                         icon="fa-print" 
-                        string="Print withholding voucher" 
+                        title="Print withholding voucher"
                         attrs="{'invisible': [('payment_method_code', 'not in', ['withholding_in', 'withholding_out'])]}"/>
             </xpath>
         </field>
