--- a/l10n_ar_ux/views/account_payment_view.xml
+++ b/l10n_ar_ux/views/account_payment_view.xml
@@ -6,10 +6,6 @@
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_form" />
         <field name="arch" type="xml">
-            <field name="l10n_latam_check_id" position="before">
-                <field name="l10n_ar_partner_vat" attrs="{'invisible': ['|', '|', ('state', '!=', 'draft'), ('l10n_ar_partner_vat', '=', False), ('payment_method_code', 'not in', ['out_third_party_checks', 'new_third_party_checks'])]}"/>
-            </field>
-
             <form>
                 <field name="l10n_latam_check_printing_type" invisible="1"/>
             </form>
@@ -20,11 +16,20 @@
             <button name="print_checks" position="after">
                 <button name="action_mark_sent" class="oe_highlight" attrs="{'invisible': ['|', '|', '|', ('payment_method_code', '!=', 'check_printing'), ('state', '!=', 'posted'), ('is_move_sent', '=', True), ('l10n_latam_check_printing_type', '!=', 'no_print')]}" string="Mark Sent" type="object"/>
             </button>
+        </field>
+    </record>
 
+     <record id="view_account_payment_form_inherited" model="ir.ui.view">
+        <field name="name">account.payment.form.inherited</field>
+        <field name="model">account.payment</field>
+        <field name="inherit_id" ref="l10n_latam_check.view_account_payment_form_inherited" />
+        <field name="arch" type="xml">
+            <field name="l10n_latam_check_id" position="before">
+                <field name="l10n_ar_partner_vat" attrs="{'invisible': ['|', '|', ('state', '!=', 'draft'), ('l10n_ar_partner_vat', '=', False), ('payment_method_code', 'not in', ['out_third_party_checks', 'new_third_party_checks'])]}"/>
+            </field>
             <xpath expr="//field[@name='check_number'][2]" position="attributes">
                 <attribute name="attrs">{'invisible': ['|', ('payment_method_code', '!=', 'check_printing'), ('check_number', '=', False), ('l10n_latam_check_printing_type', '!=', 'no_print')], 'readonly': ['|', ('state', '!=', 'draft'), ('l10n_latam_check_printing_type', '!=', 'no_print')], 'required': [('l10n_latam_check_printing_type', '=', 'no_print')]}</attribute>
             </xpath>
-
         </field>
     </record>
 
