--- a/l10n_ar_ux/wizards/account_payment_register_views.xml
+++ b/l10n_ar_ux/wizards/account_payment_register_views.xml
@@ -4,7 +4,7 @@
     <record id="view_account_payment_register_form" model="ir.ui.view">
         <field name="name">account.payment.register.form</field>
         <field name="model">account.payment.register</field>
-        <field name="inherit_id" ref="account.view_account_payment_register_form"/>
+        <field name="inherit_id" ref="l10n_latam_check.view_account_payment_register_form"/>
         <field name="arch" type="xml">
             <form>
                 <field name="l10n_latam_check_printing_type" invisible="1"/>
